Day 17: Project 1, part two

--- a/project-01/swift-challenge-project-1/swift-challenge-project-1/Base.lproj/Main.storyboard
+++ b/project-01/swift-challenge-project-1/swift-challenge-project-1/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,15 +17,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Picture" textLabel="8Z1-hF-8fM" style="IBUITableViewCellStyleDefault" id="OY2-uS-s1j">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Picture" textLabel="8Z1-hF-8fM" style="IBUITableViewCellStyleDefault" id="OY2-uS-s1j">
                                 <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="OY2-uS-s1j" id="dgm-r1-ayP">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="385.5" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8Z1-hF-8fM">
-                                            <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="20" y="0.0" width="357.5" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
@@ -45,6 +46,35 @@
             </objects>
             <point key="canvasLocation" x="844.92753623188412" y="55.580357142857139"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="VOo-5O-iX1">
+            <objects>
+                <viewController storyboardIdentifier="Detail" id="kYv-RR-nTk" customClass="DetailViewController" customModule="swift_challenge_project_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EiC-xC-C9g">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IIo-S0-7ma">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7fV-Rn-fQ2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IIo-S0-7ma" firstAttribute="leading" secondItem="7fV-Rn-fQ2" secondAttribute="leading" id="GOi-T5-eKF"/>
+                            <constraint firstItem="IIo-S0-7ma" firstAttribute="centerX" secondItem="EiC-xC-C9g" secondAttribute="centerX" id="PMT-vQ-XiX"/>
+                            <constraint firstItem="IIo-S0-7ma" firstAttribute="top" secondItem="EiC-xC-C9g" secondAttribute="topMargin" constant="-44" id="V3R-Lq-pK4"/>
+                            <constraint firstItem="IIo-S0-7ma" firstAttribute="centerY" secondItem="EiC-xC-C9g" secondAttribute="centerY" id="hgM-nM-jlR"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="IIo-S0-7ma" id="jcn-x7-8B7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SKV-8T-jwj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1776.8115942028987" y="55.580357142857139"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="ENC-ye-Tzs">
             <objects>
@@ -53,6 +83,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="rnx-wb-qCc">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
